Implemented Word of the Day API

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <p>You get 6 chances to figure out the 5-letter word of the day. When you are done typing your current word, press Enter.</p>
         <div class="divider"></div>
         <div class="results-message">
-            <div class="you-won">You won! Booty was the word of the day.</div>
-            <div class="you-lost">You lost. The word of the day is booty.</div>
+            <div class="you-won hidden"></div>
+            <div class="you-lost hidden"></div>
         </div>
         <div class="loading"></div>
             <div class="grid-container">
