Progress on word validation functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>WordMasters</h1>
             <p>You get 6 chances to figure out the 5-letter word of the day. When you are done typing your current word, press Enter.</p>
         <div class="divider"></div>
+        <div class="loading hidden">loading...</div>
         <div class="results-message">
             <div class="you-won hidden"></div>
             <div class="you-lost hidden"></div>
