--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordMasters</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <div class="wordmasters">
+    <div class="wordmasters animate">
         <h1>WordMasters</h1>
             <p>You get 6 chances to figure out the 5-letter word of the day. When you are done typing your current word, press Enter.</p>
         <div class="divider"></div>
